# nix-ninja

./: .prettierrc  Cargo.toml  README.md  deny.toml  flake.nix
.github/actions/setup-nix/: action.yml
.github/workflows/: ci.yml  gc.yml
crates/deps-infer/: Cargo.toml
crates/deps-infer/src/: c_include_parser.rs  clang_infer.rs  gcc_depfile.rs  gcc_depfile_parser.rs  gcc_include_parser.rs  lib.rs  main.rs
crates/nix-builder-rpc-client/: Cargo.toml
crates/nix-builder-rpc-client/src/: aterm.rs  lib.rs
crates/nix-libstore/: Cargo.toml
crates/nix-libstore/src/: derivation.rs  derived_path.rs  store_path.rs
crates/nix-ninja/: Cargo.toml
crates/nix-ninja-task/: Cargo.toml
crates/nix-ninja-task/src/: derived_file.rs  lib.rs  main.rs  patchelf.rs
crates/nix-ninja/src/: build.rs  cli.rs  lib.rs  local.rs  main.rs  relative_from.rs  rpc_client.rs  task.rs
crates/nix-ninja/src/subtool/: dynamic_task.rs  mod.rs
crates/nix-tool/: Cargo.toml
crates/nix-tool/src/: lib.rs
docs/: design.md  dynamic-deps.md  dynamic-derivations.md  todo.md
examples/incremental/: CMakeLists.txt  main.c
examples/lix/: default.nix  disable-meson-clang-tidy.patch
examples/nix/: default.nix
modules/flake/: checks.nix  default.nix  nixosTests.nix  overlays.nix  packages.nix
modules/flake/examples/cmake/: CMakeLists.txt  main.cpp
modules/flake/examples/dynamic-deps/: config.h  generate.sh  main.cpp  meson.build
modules/flake/examples/header/: header.h  main.cpp
modules/flake/examples/hello/: main.cpp
modules/flake/examples/incremental/: main.c  util.c
modules/flake/examples/multi-source/: util.c  util.h
modules/flake/examples/nix/: default.nix
modules/flake/examples/run-script/: gen.sh  main.cpp  meson.build
modules/flake/examples/shared-lib/: main.c  meson.build  word1lib.c  word1lib.h  word2lib.c  word2lib.h
modules/flake/pkgs/mkCMakePackage/: default.nix
modules/flake/pkgs/mkMesonPackage/: default.nix
modules/flake/pkgs/nix-portable/: default.nix
modules/nixos/: default.nix
modules/nixos/tests/: nix-build-cmake.nix  nix-build-dynamic-deps.nix  nix-build-header.nix  nix-build-hello.nix  nix-build-incremental.nix  nix-build-multi-source.nix  nix-build-run-script.nix  nix-build-shared-lib.nix  nix-build.nix
