[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.metadata.crane]
name = "nix-ninja"

[workspace.dependencies]
harmonia-protocol = { git = "https://github.com/nix-community/harmonia.git", branch = "main" }
harmonia-store-aterm = { git = "https://github.com/nix-community/harmonia.git", branch = "main" }
harmonia-store-content-address = { git = "https://github.com/nix-community/harmonia.git", branch = "main" }
harmonia-store-derivation = { git = "https://github.com/nix-community/harmonia.git", branch = "main" }
harmonia-store-path = { git = "https://github.com/nix-community/harmonia.git", branch = "main" }
harmonia-store-remote = { git = "https://github.com/nix-community/harmonia.git", branch = "main" }
harmonia-utils-hash = { git = "https://github.com/nix-community/harmonia.git", branch = "main" }
