[package]
name = "nix-builder-rpc-client"
version.workspace = true
edition.workspace = true
description = "Client for the Nix daemon's builder-rpc-v0 mode (NixOS/nix#15793)"
license = "MIT"

[dependencies]
anyhow = "1.0"
futures = "0.3"
harmonia-protocol = { workspace = true }
harmonia-store-aterm = { workspace = true }
harmonia-store-core = { workspace = true }
harmonia-store-remote = { workspace = true }
harmonia-utils-hash = { workspace = true }
nix-nar = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["rt", "io-util", "net", "sync", "macros"] }
