[package]
name = "nix-ninja-task"
version.workspace = true
edition.workspace = true
description = "Nix derivation builder for nix-ninja"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
elf = "0.8"
harmonia-store-derivation = { workspace = true }
harmonia-store-path = { workspace = true }
