[package]
name = "nix-ninja"
version.workspace = true
edition.workspace = true
description = "Ninja compatible build system using Nix backend"
license = "MIT"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.4", features = ["derive", "env"] }
deps-infer = { path = "../deps-infer" }
harmonia-store-content-address = { workspace = true }
harmonia-store-derivation = { workspace = true }
harmonia-store-path = { workspace = true }
harmonia-utils-hash = { workspace = true }
include-graph = { git = "https://github.com/hinshun/igraph", branch = "performance-improvements" }
n2 = { git = "https://github.com/hinshun/n2", branch = "feature/minimal-pub", default-features = false }
nix-ninja-task = { path = "../nix-ninja-task" }
nix-tool = { path = "../nix-tool" }
regex = "1"
serde = "1"
serde_json = "1"
sha2 = "0.10"
shell-words = "1.1.0"
walkdir = "2"
which = "7.0.2"
